--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  color: white;
+  color: #FFFFFF;
   margin-top: 8%;
 }
 
@@ -50,7 +50,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  color: white;
+  color: #FFFFFF;
   font-size: 16px;
   flex-wrap: wrap;
   padding: 8% 0;
@@ -88,7 +88,7 @@ body {
 }
 
 .input-button-object{
-  color: white !important;
+  color: #FFFFFF !important;
   background: #5c6ac4 !important;
   font-size: 16px !important;
   padding: 15px !important;
@@ -100,14 +100,14 @@ body {
 }
 
 .loading-button-object {
-  color: white !important;
+  color: #FFFFFF !important;
   background: #5c6ac4 !important;
   font-size: 16px !important;
   padding: 15px !important;
 }
 
 .submitted {
-  color: white;
+  color: #FFFFFF;
   padding: 8% 0;
   flex-direction: column;
   width: 100%;
